# autoscribe

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
autoscribe/: __init__.py  main.py
autoscribe/cli/: main.py
autoscribe/core/: changelog.py  git.py
autoscribe/models/: changelog.py  config.py
autoscribe/services/: github.py  openai.py
autoscribe/templates/: default.markdown.j2  default.md.j2  version.markdown.j2
autoscribe/utils/: logging.py  version.py
tests/: conftest.py
tests/integration/: test_changelog_service.py  test_git_service.py  test_github_service.py
tests/unit/: test_changelog_model.py  test_changelog_service.py  test_cli.py  test_config.py  test_git.py  test_github_service.py  test_openai_service.py  test_version.py
